# concrete-backup

./: .flake8  README.md  TODO.md  WORKFLOW_FEATURES.md  backup_config.py  backup_engine.py  backup_gui.py  backup_runner.py  cron_manager.py  drive_manager.py  pyproject.toml  run_backup_gui.sh  run_backup_gui_dev.sh  test_profile.yaml  version.py
.github/scripts/: build-deb-package.sh  changelog.template  concrete-backup.desktop  control.template  copyright.template  create-deb-structure.sh  create-github-release.sh  create-release-archive.sh  launcher-script.sh  prerm.sh  test-deb-package.sh
.github/workflows/: python-app.yml
gui/: __init__.py  backup_config_ui_builder.py  backup_config_view.py  backup_config_widget.py  backup_progress_dialog.py  backup_worker.py  custom_commands_tab.py  destinations_tab.py  gui_utils.py  main_window.py  profile_manager.py  schedule_tab.py  sources_tab.py
gui/controllers/: __init__.py  main_view_controller.py  profile_ui_controller.py  schedule_ui_controller.py
gui/dialogs/: __init__.py  about_dialog.py  backup_progress_dialog.py
gui/tabs/: __init__.py  advanced_settings_tab.py  custom_commands_tab.py  destinations_tab.py  schedule_tab.py  sources_tab.py
gui/widgets/: __init__.py  command_list_widget.py  directory_list_widget.py  directory_picker.py  drive_selection_widget.py
gui/workers/: __init__.py  backup_worker.py
localization/: __init__.py  manage_translations.py  tr.py  translation.py
managers/: cron_manager.py  drive_manager.py  profile_manager.py  schedule_status_manager.py
snap/: snapcraft.yaml
utils/: __init__.py  logging_helper.py
workers/: __init__.py  backup_worker.py
(+4 files in other folders)
