[tool.poetry]
name = "concrete-backup"
version = "0.1.0"
description = ""
authors = ["Wanja Wischmeier <wanja.wischmeier@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
