[tool.poetry]
name = "concrete-backup"
version = "0.1.0"
description = ""
authors = ["Wanja Wischmeier <wanja.wischmeier@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
PyQt6 = "^6.7.0"
psutil = "^6.0.0"
pyqt5 = "^5.15.11"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pyinstaller = "^6.0.0"

[tool.flake8]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    "build",
    "dist"
]
max-line-length = 127
max-complexity = 10
ignore = [
    "E203",  # whitespace before ':'
    "W503",  # line break before binary operator
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
